# Gui-compilers

./: CMakeLists.txt  comnogui.cpp  main.cpp  script.py  test.cpp
src/: gui.cpp  gui.h  main.cpp  main.h  script.py  utils.cpp  utils.h
